[package]
name = "gd-glow-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
catppuccin-egui = "1.0"
lazy-static-include = "3.1.3"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"